# metaso-py

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
.opencli/explore/metaso/: manifest.json
.opencli/record/metaso/: captured.json
docs/superpowers/plans/: 2026-04-02-metaso-py-implementation.md
docs/superpowers/specs/: 2026-04-02-metaso-py-design.md
src/metaso/: __init__.py  __main__.py  _bookshelf.py  _chat.py  _core.py  _files.py  _reader.py  _search.py  _topics.py  _user.py  auth.py  cli.py  client.py  exceptions.py  paths.py  types.py
src/metaso/backends/: __init__.py  base.py  official.py  unofficial.py
src/metaso/cli/: __init__.py  bookshelf.py  chat.py  file.py  helpers.py  reader.py  search.py  session.py  skill.py  topic.py  user.py
tests/: conftest.py
tests/integration/: test_cli.py  test_client.py  test_official_backend.py  test_unofficial_backend.py
tests/unit/: test_auth.py  test_exceptions.py  test_paths.py  test_types.py
