[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metaso-py"
version = "0.1.0"
description = "Python client for Metaso AI search"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "click>=8.0",
    "pydantic>=2.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
metaso = "metaso.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["e2e: end-to-end tests requiring real API access"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["src/metaso"]

[tool.hatch.build.targets.wheel.force-include]
"src/metaso/data" = "metaso/data"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
